force-app/main/default/objects/noduplicates__Matching_Rule_Field__c/noduplicates__Matching_Rule_Field__c.object-meta.xml
<CustomObject>
    <label>Matching Rule Field</label>
    <nameField>
        <displayFormat>MRF-{0000000}</displayFormat>
        <label>Matching Rule Field Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Matching Rule Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>