force-app/main/default/objects/noduplicates__Matching_Rule_Field__c/fields/noduplicates__Matching_Rule__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__Matching_Rule__c</fullName>
    <label>Matching Rule</label>
    <referenceTo>noduplicates__Matching_Rule__c</referenceTo>
    <relationshipLabel>Matching Rule Fields</relationshipLabel>
    <relationshipName>Matching_Rule_Fields</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>