force-app/main/default/objects/noduplicates__Matching_Rule_Field__c/fields/noduplicates__Optional__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__Optional__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Optional</label>
    <type>Checkbox</type>
</CustomField>