force-app/main/default/objects/noduplicates__Matching_Rule_Field__c/fields/noduplicates__Type__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__Type__c</fullName>
    <label>Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>